--- a/public/theme/base-2021/partials/agenda/_menu_agenda_instit_correze.twig
+++ b/public/theme/base-2021/partials/agenda/_menu_agenda_instit_correze.twig
@@ -5,5 +5,7 @@
                         class="fas fa-angle-double-right"></i> Atelier PAC Résidents Mémoire</a>
         <a href="/page/agenda-correze-pac-residents-ardoiz" class="btn btn-lg btn-primary"><i
                         class="fas fa-angle-double-right"></i> Atelier PAC Résidents Ardoiz</a>
+        <a href="/page/agenda-correze-pac-yoga-du-rire" class="btn btn-lg btn-primary"><i
+                        class="fas fa-angle-double-right"></i> Atelier Yoga du rire</a>
 
 </div>
