--- a/public/theme/base-2021/partials/agenda/_menu_agenda_dom_correze.twig
+++ b/public/theme/base-2021/partials/agenda/_menu_agenda_dom_correze.twig
@@ -36,6 +36,10 @@
                         class="fas fa-angle-double-right"></i> Atelier Nutri Activ </a>
         <a href="/page/agenda-correze-ateliers-autonomie-numeriques" class="btn btn-lg btn-primary"><i
                         class="fas fa-angle-double-right"></i> Atelier Autonomie Numérique </a>
+
+        <a href="/page/agenda-correze-yoga-du-rire" class="btn btn-lg btn-primary"><i
+                        class="fas fa-angle-double-right"></i> Atelier Yoga du rire </a>
+
         <a href="/page/agenda-correze-ateliers-en-ligne" class="btn btn-lg btn-primary"><i
                         class="fas fa-angle-double-right"></i> Atelier en ligne </a>
 
