--- a/public/theme/base-2021/partials/agenda/_menu_agenda_dom_creuse.twig
+++ b/public/theme/base-2021/partials/agenda/_menu_agenda_dom_creuse.twig
@@ -35,6 +35,8 @@
                         class="fas fa-angle-double-right"></i> Atelier Nutri Activ </a>
         <a href="/page/agenda-creuse-ateliers-autonomie-numeriques" class="btn btn-lg btn-primary"><i
                         class="fas fa-angle-double-right"></i> Atelier Autonomie Numérique </a>
+        <a href="/page/agenda-creuse-yoga-du-rire" class="btn btn-lg btn-primary"><i
+                        class="fas fa-angle-double-right"></i> Atelier Yoga du rire </a>
         <a href="/page/agenda-creuse-ateliers-en-ligne" class="btn btn-lg btn-primary"><i
                         class="fas fa-angle-double-right"></i> Atelier en ligne </a>
 
